--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,7 @@ jobs:
   type-check:
     name: Type Checking
     runs-on: ubuntu-latest
-    needs: [type-check]
+    needs: [setup]
 
     steps:
       - name: Check out Git repository
