--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
       - name: 🛑 Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
         with:
+          # The CI workflow
+          workflow_id: 25647852
           access_token: ${{ github.token }}
   build:
     name: Build
