--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           # The CI workflow
           workflow_id: 25647852
-          access_token: ${{ secrets.gh-token }}
+          access_token: ${{ secrets.MY_GH_PAT }}
   build:
     name: Build
     runs-on: ubuntu-latest
