--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,16 @@ on:
         required: false
         type: string
 jobs:
+  setup:
+    name: Housekeeping
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          # The CI workflow
+          workflow_id: 25647852
+          access_token: ${{ secrets.MY_GH_PAT }}
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -90,6 +100,7 @@ jobs:
   type-check:
     name: Type Checking
     runs-on: ubuntu-latest
+    needs: [setup]
 
     steps:
       - name: Check out Git repository
